# HSoM

./: HSoM.cabal  flake.nix
HSoM/Examples/: RandomMusic.lhs
