cabal-version:      3.0
name:               HSoM
version:            1.0.0
license:            BSD-3-Clause
license-file:       License
copyright:          Copyright (c) 2008-2015 Paul Hudak and Donya Quick
category:           Sound
stability:          experimental
author:
  Paul Hudak <paul.hudak@yale.edu>,
  Donya Quick <donya.quick@yale.edu>,
  Dan Winograd-Cort <daniel.winograd-cort@yale.edu>

maintainer:         Donya Quick <donyaquick@gmail.com>
bug-reports:        https://github.com/Euterpea/Euterpea/issues
homepage:           http://haskell.cs.yale.edu/
synopsis:           Library for computer music education
description:        Library for computer music education.
extra-source-files: ReadMe.txt

library
  default-language:   Haskell2010
  hs-source-dirs:     .
  ghc-options:        -O2 -funbox-strict-fields -fexcess-precision
  default-extensions: CPP
  exposed-modules:
    HSoM
    HSoM.Examples.Additive
    HSoM.Examples.AMandFM
    HSoM.Examples.EuterpeaExamples
    HSoM.Examples.FFT
    HSoM.Examples.Interlude
    HSoM.Examples.IntervalTrainer
    HSoM.Examples.MoreMusic
    HSoM.Examples.MUIExamples1
    HSoM.Examples.MUIExamples2
    HSoM.Examples.MusicToSignal
    HSoM.Examples.NewResolutions
    HSoM.Examples.PhysicalModeling
    HSoM.Examples.RandomMusic
    HSoM.Examples.SelfSimilar
    HSoM.Examples.SoundCheck
    HSoM.Examples.SpectrumAnalysis
    HSoM.Examples.SSF
    HSoM.MUI
    HSoM.MUI.MidiWidgets
    HSoM.Performance
    System.Random.Distributions

  other-modules:
  autogen-modules:
  build-depends:
  build-depends:
    , array
    , arrows
    , base          >=4.7 && <5
    , containers
    , deepseq
    , Euterpea
    , ghc-prim
    , HCodecs
    , markov-chain
    , pure-fft
    , random
    , UISF
